--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.15"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
