--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nodemon app.js",
     "test": "jest",
     "lint": "eslint .",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "swagger": "node swagger.js"
   },
   "dependencies": {
     "dotenv": "^16.1.3",
@@ -14,9 +15,13 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.12.0-alpha.1"
+    "sequelize": "^6.12.0-alpha.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
     "jest": "^29.5.0"
   }
+}
